Sun Oct  7 17:16:05 2001  Christopher Faylor <cgf@cygnus.com>

	* path.cc (normalize_posix_path): Don't eat a '.' after a '\\' since it
	has special meaning on NT.

	* syscalls.cc (access): Use stat_worker.

Fri Oct  5 21:01:14 2001  Christopher Faylor <cgf@cygnus.com>

	* fhandler.cc (fhandler_base::fork_fixup): Protect dup'ed handle and
	record it as non-inheritable for debugging purposes in case there is a
	subsequent fork or exec.
	* fhandler_tty.cc (fhandler_tty_common::fixup_after_fork): Allow
	fork_fixup to call ProtectHandle.

Fri Oct  5 14:22:47 2001  Christopher Faylor <cgf@cygnus.com>

	* path.cc (get_raw_device_number): Correct length arguments for
	wdeveqn.

Fri Oct  5 11:05:32 2001  Christopher Faylor <cgf@cygnus.com>

	* path.cc (getcwd): Allow NULL first argument.

Fri Oct  5 00:31:35 2001  Christopher Faylor <cgf@cygnus.com>

	* heap.h (inheap): Check for NULL.

Thu Oct  4 23:17:49 2001  Christopher Faylor <cgf@cygnus.com>

	Add second path_conv * argument to fstat()s throughout.
	* fhandler.h: Change read and fstat to regparm/stdcall throughout.
	(fhandler_base::fstat): Just declare.  Don't define.
	(fhandler_disk_file::fstat_helper): Declare.
	* fhandler.cc (fhandler_base::fstat): Move here from fhandler.h, adapt
	from former stat_dev().
	(fhandler_disk_file::fstat): Move most of the disk-file-specific logic
	from stat_worker to here.  Use fstat_helper to derive final fstat
	output.
	(fhandler_disk_file::fstat_helper): New method, renamed from former
	fstat method.
	(num_entries): Moved here from syscalls.cc.
	* fhandler_mem.cc (fhandler_dev_mem::fstat): Use base class to
	initialize most stuff.  Invert has_physical_mem_access test for
	establishing permissions.
	* fhandler_raw.cc (fhandler_dev_raw::fstat): Eliminate unneed test and
	memory clearing.  Use base class to initialize most stuff.
	* syscalls.cc (stat_dev): Eliminate.
	(stat_worker): Simply call fstat method to generate fstat output.  Move