@@ -1,3 +1,8 @@
+Mon Oct  8 00:25:18 2001  Christopher Faylor <cgf@cygnus.com>
+
+	* external.cc (fillout_pinfo): Reset counter whenever we initialize the
+	pid list.
+
 Sun Oct  7 17:16:05 2001  Christopher Faylor <cgf@cygnus.com>
 
 	* path.cc (normalize_posix_path): Don't eat a '.' after a '\\' since it
